--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,17 @@ body, .app {
   padding: 0 10px 20px;
 }
 
+button.remove {
+  border-radius: 10px;
+  color: #184d47;
+  background-color: #fad586;
+}
+
+button.submit {
+  color: #184d47;
+  background-color: #fad586;
+}
+
 @media (min-width: 600px) {
   .bookshelf {
     padding: 0 20px 40px;
