--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-html, body, .root {
+html,
+body,
+.root {
   height: 100%;
 }
 
@@ -6,7 +8,8 @@ body {
   line-height: 1.5;
 }
 
-body, .app {
+body,
+.app {
   background: #d6efc7;
 }
 
@@ -69,15 +72,16 @@ footer {
 }
 
 h2.bookshelf-title {
-  color:#184d47;
+  color: #184d47;
 }
 
 .bookshelf-books {
   text-align: center;
 }
 
-div.book-title, div.book-authors {
-  color:#184d47;
+div.book-title,
+div.book-authors {
+  color: #184d47;
 }
 
 .rateForm {
@@ -107,7 +111,7 @@ div.book-title, div.book-authors {
   height: 50px;
   border-radius: 50%;
   background: #184d47;
-  background-image: url('./icons/add.svg');
+  background-image: url("./icons/add.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 28px;
@@ -120,7 +124,6 @@ div.book-title, div.book-authors {
   background-color: rgb(0, 102, 0);
 }
 
-
 /* search page */
 
 .search-books-bar {
@@ -130,7 +133,7 @@ div.book-title, div.book-authors {
   left: 0;
   z-index: 5;
   display: flex;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 0 6px rgba(0,0,0,0.23);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 0 6px rgba(0, 0, 0, 0.23);
 }
 
 .search-books-input-wrapper {
@@ -152,7 +155,7 @@ div.book-title, div.book-authors {
   left: 15px;
   width: 50px;
   height: 53px;
-  background-image: url('./icons/arrow-back.svg');
+  background-image: url("./icons/arrow-back.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 28px;
@@ -218,11 +221,11 @@ button:active {
   height: 40px;
   border-radius: 50%;
   background: #96bb7c;
-  background-image: url('./icons/arrow-drop-down.svg');
+  background-image: url("./icons/arrow-drop-down.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 20px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .book-shelf-changer select {
@@ -235,7 +238,7 @@ button:active {
 /* book cover */
 
 .book-cover {
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   background: #eee;
 }
 
@@ -243,4 +246,32 @@ button:active {
   padding: 20px 10px 0;
   text-align: center;
   font-size: 0.8em;
+}
+
+.errorPage {
+  color: #184d47;
+  text-align: center;
+  padding-top: 200px;
+}
+
+.pageNotFound {
+  padding-bottom: 50px;
+}
+
+.erroPageBackButton {
+  background-color: #fad586;
+  font-size: 1.5rem;
+  padding: 4px 20px;
+  border-radius: 10px;
+  color: #184d47;
+}
+
+.error404 {
+  background-color: #fad586;
+  font-size: 1.5rem;
+  padding: 4px 20px;
+  border-radius: 10px;
+  color: #184d47;
+  margin-left: 20px;
+  margin-bottom: 20px;
 }
